--- a/index.html
+++ b/index.html
@@ -10,36 +10,38 @@
 
     <script type="module">
         import * as utilLib from 'https://cdn.jsdelivr.net/npm/@reef-chain/util-lib@3.0.0/+esm';
+        
+        const fetchExtensions = async()=>{
+            const extensions = await utilLib.extension.web3Enable('fetch-accounts-sample-app', undefined, true);
 
-        const TEST_ACCOUNTS = [
-        {
-            address: "5GKKbUJx6DQ4rbTWavaNttanWAw86KrQeojgMNovy8m2QoXn",
-            name: "acc1",
-            meta: { source: "reef" },
-        },
-        {
-            address: "5EnY9eFwEDcEJ62dJWrTXhTucJ4pzGym4WZ2xcDKiT3eJecP",
-            name: "test-mobile",
-            meta: { source: "reef" },
-        },
-        {
-            address: "5G9f52Dx7bPPYqekh1beQsuvJkhePctWcZvPDDuhWSpDrojN",
-            name: "test1",
-            meta: { source: "reef" },
-        },
-        ];
+            const extension = extensions.find((ext) => ext.name === "reef");
 
-       console.log(utilLib)
+            const accounts = await extension.accounts.get();
+            const accountsWithMeta = accounts.map(
+                (acc) =>
+                ({
+                    address: acc.address,
+                    meta: {
+                    genesisHash: acc.genesisHash,
+                    name: acc.name && acc.name.length>0?acc.name:extension.name,
+                    source: extension.name,
+                    },
+                    type: acc.type,
+                }
+            ));
 
-       utilLib.reefState.initReefState({
-        network:utilLib.network.AVAILABLE_NETWORKS.testnet,
-        jsonAccounts:{
-            accounts:TEST_ACCOUNTS,
-            injectedSigner:undefined
+            utilLib.reefState.initReefState({
+                network:utilLib.network.AVAILABLE_NETWORKS.testnet,
+                jsonAccounts:{
+                    accounts:accountsWithMeta,
+                    injectedSigner:extension.reefSigner
+                }
+            });
+
+            utilLib.reefState.accounts$.subscribe((val)=>console.log("val===",val));
         }
-       });
 
-       utilLib.reefState.accounts$.subscribe((val)=>console.log("val===",val))
+        fetchExtensions()
     </script>
 </body>
 </html>
