--- a/index.html
+++ b/index.html
@@ -2,54 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial="initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fetch Accounts from util-lib</title>
 </head>
 <body>
-    
+    <h1>Accounts</h1>
+    <div id="status">Fetching accounts...</div>
+    <ul id="accounts"></ul>
 
     <script type="module">
         import * as utilLib from 'https://cdn.jsdelivr.net/npm/@reef-chain/util-lib@3.0.0/+esm';
 
-        const fetchExtensions = async()=>{
-            //intentional delay of 3 seconds- so as to give time to extension to inject
+        const fetchExtensions = async () => {
+            // Intentional delay of 3 seconds
             await new Promise((resolve) => setTimeout(resolve, 3000));
 
             let extensions = await utilLib.extension.web3Enable('fetch-accounts-sample-app', undefined, false);
 
             const extension = extensions.find((ext) => ext.name === "reef");
 
-            if(!extension){
-                alert("No Extensions Installed!");
+            if (!extension) {
+                document.getElementById("status").innerText = "No Extensions Installed!";
                 return;
             }
 
             const accounts = await extension.accounts.get();
-            const accountsWithMeta = accounts.map(
-                (acc) =>
-                ({
-                    address: acc.address,
-                    meta: {
-                    genesisHash: acc.genesisHash,
-                    name: acc.name && acc.name.length>0?acc.name:extension.name,
-                    source: extension.name,
-                    },
-                    type: acc.type,
-                }
-            ));
+            if (accounts.length === 0) {
+                document.getElementById("status").innerText = "No accounts found!";
+                return;
+            }
 
-            utilLib.reefState.initReefState({
-                network:utilLib.network.AVAILABLE_NETWORKS.testnet,
-                jsonAccounts:{
-                    accounts:accountsWithMeta,
-                    injectedSigner:extension.reefSigner
-                }
+            const accountsList = document.getElementById("accounts");
+            document.getElementById("status").innerText = "";
+
+            accounts.forEach((account) => {
+                console.log("account===",account)
+                const listItem = document.createElement("li");
+                listItem.innerText = `${account.name || "Unnamed Account"} - ${account.address}`;
+                accountsList.appendChild(listItem);
             });
+        };
 
-            utilLib.reefState.accounts$.subscribe((val)=>console.log("val===",val));
-        }
-
-        fetchExtensions()
+        fetchExtensions();
     </script>
 </body>
 </html>
